Update title and improve styling in index.html

--- a/index.html
+++ b/index.html
@@ -3,148 +3,224 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Armando’s Company Name – Tree Cutting Services</title>
+    <title>Armando’s Company Name – Tree Care & Cutting</title>
+
     <style>
-        /* Basic styling */
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
-            background: #f4f4f4;
+            font-family: Arial, sans-serif;
+            background: #f5f5f0; /* earthy off-white */
         }
+
         header {
-            background: #2E8B57;
+            background: #3d5c37; /* deep earthy green */
             color: white;
-            padding: 20px;
+            padding: 25px;
             text-align: center;
         }
-        nav {
-            background: #333;
-            color: white;
-            padding: 10px;
-            text-align: center;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 15px;
-            font-weight: bold;
-        }
+
         .hero {
-            background: url("https://images.unsplash.com/photo-1508873693437-1f76e9a3a52c?auto=format&fit=crop&w=1400&q=80") no-repeat center/cover;
-            height: 300px;
+            background: url("https://images.unsplash.com/photo-1508873693437-1f76e9a3a52c?auto=format&fit=crop&w=1400&q=80")
+            no-repeat center/cover;
+            height: 330px;
             display: flex;
             align-items: center;
             justify-content: center;
             color: white;
-            text-align: center;
+            text-shadow: 0px 0px 12px black;
             font-size: 2rem;
+            font-weight: bold;
         }
+
         .section {
-            padding: 40px 20px;
-            max-width: 800px;
-            margin: auto;
-            background: white;
-            margin-top: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        .chatbox {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background: white;
-            border: 1px solid #ccc;
+            max-width: 900px;
+            margin: 30px auto;
+            background: #ffffff;
+            padding: 30px;
             border-radius: 10px;
-            width: 250px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-            font-size: 0.9rem;
-            display: flex;
-            flex-direction: column;
+            box-shadow: 0 0 12px rgba(0,0,0,0.1);
         }
-        .chatbox-messages {
-            flex-grow: 1;
-            padding: 10px;
-            overflow-y: auto;
-            border-bottom: 1px solid #eee;
-            height: 150px;
-        }
-        .chatbox-input {
-            padding: 10px;
-            display: flex;
-        }
-        .chatbox-input input {
-            flex-grow: 1;
-            padding: 8px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        .chatbox-input button {
-            padding: 8px 15px;
-            margin-left: 5px;
-            background: #2E8B57;
+
+        .contact-btn {
+            display: inline-block;
+            background: #5c7f56;
             color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
+            padding: 12px 20px;
+            border-radius: 6px;
+            text-decoration: none;
+            font-size: 1.1rem;
+            font-weight: bold;
         }
+
+        .contact-btn:hover {
+            background: #4c6b48;
+        }
+
         footer {
-            background: #333;
+            background: #3d5c37;
             color: white;
             text-align: center;
             padding: 20px;
             margin-top: 40px;
         }
+
+        /* Chat Box */
+        .chatbox {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            width: 260px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+            display: flex;
+            flex-direction: column;
+            font-size: 0.9rem;
+            overflow: hidden;
+        }
+
+        .chatbox-header {
+            background: #5c7f56;
+            color: white;
+            padding: 10px;
+            text-align: center;
+            font-weight: bold;
+        }
+
+        .chatbox-messages {
+            height: 180px;
+            padding: 10px;
+            overflow-y: auto;
+            border-bottom: 1px solid #ddd;
+        }
+
+        .chatbox-input {
+            display: flex;
+            padding: 10px;
+        }
+
+        .chatbox-input input {
+            flex-grow: 1;
+            padding: 6px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .chatbox-input button {
+            padding: 6px 10px;
+            margin-left: 6px;
+            background: #5c7f56;
+            border: none;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .chatbox-input button:hover {
+            background: #4c6b48;
+        }
+
+        .user-msg {
+            text-align: right;
+            margin: 6px 0;
+            color: #333;
+        }
+
+        .bot-msg {
+            text-align: left;
+            margin: 6px 0;
+            color: #2f4a2a;
+            font-weight: bold;
+        }
     </style>
 </head>
+
 <body>
 
 <header>
     <h1>Armando’s Company Name</h1>
-    <p>Your Reliable Tree Cutting Services</p>
+    <p>Professional Tree Care & Cutting Services</p>
 </header>
 
-<nav>
-    <a href="#services">Services</a>
-    <a href="#pricing">Pricing</a>
-    <a href="#contact">Contact</a>
-</nav>
-
 <div class="hero">
-    We Take Care of Your Trees
+    Quality Tree Care You Can Trust
 </div>
 
-<div class="section" id="services">
+<div class="section">
     <h2>Our Services</h2>
-    <p>We provide professional tree cutting and trimming services to keep your yard safe and beautiful.</p>
-</div>
+    <ul>
+        <li>Tree Cutting & Removal</li>
+        <li>Tree Trimming & Pruning</li>
+        <li>Stump Removal</li>
+        <li>Storm Damage Cleanup</li>
+        <li>Yard Debris Hauling</li>
+    </ul>
 
-<div class="section" id="pricing">
-    <h2>Pricing</h2>
-    <p>Contact us for a free quote!</p>
-</div>
-
-<div class="section" id="contact">
-    <h2>Contact Us</h2>
-    <p>Reach out to schedule your service today.</p>
-</div>
-
-<div class="chatbox">
-    <div class="chatbox-messages" id="chatbox-messages">
-        <div>Welcome to our chat! Ask us something like "What is your phone number?"</div>
-    </div>
-    <div class="chatbox-input">
-        <input type="text" id="chatbox-input" placeholder="Type your message...">
-        <button onclick="sendChat()">Send</button>
-    </div>
+    <br>
+    <a class="contact-btn" href="contact.html">📞 Contact Us</a>
 </div>
 
 <footer>
     © 2025 Armando’s Company Name – All Rights Reserved
 </footer>
 
+<!-- CHAT BOX -->
+<div class="chatbox">
+    <div class="chatbox-header">Live Chat</div>
+    <div class="chatbox-messages" id="chatbox-messages">
+        <div class="bot-msg">Hi! How can we help you today?</div>
+    </div>
+
+    <div class="chatbox-input">
+        <input type="text" id="chat-input" placeholder="Type a message…">
+        <button onclick="sendChat()">Send</button>
+    </div>
+</div>
+
 <script>
-    function sendChat() {
-        const input = document.getElementById('chatbox-input');
-        const message = input.value.trim().toLowerCase();
-        const chatbox = document.getElementById('chatbox-messages'
+function sendChat() {
+    const input = document.getElementById("chat-input");
+    const msg = input.value.trim();
+    if (msg === "") return;
+
+    // Show user message
+    const box = document.getElementById("chatbox-messages");
+    box.innerHTML += `<div class="user-msg">${msg}</div>`;
+
+    input.value = "";
+
+    // Basic rule-based responses
+    let reply = "I'm not sure, but you can contact us!";
+
+    const m = msg.toLowerCase();
+
+    if (m.includes("hello") || m.includes("hi")) {
+        reply = "Hello! How can we assist you with your tree care today?";
+    }
+
+    if (m.includes("phone") || m.includes("number")) {
+        reply = "Our phone number is (555) 123-4567.";
+    }
+
+    if (m.includes("hours") || m.includes("open")) {
+        reply = "We operate Monday–Saturday, 7AM–6PM.";
+    }
+
+    if (m.includes("quote") || m.includes("price")) {
+        reply = "We offer free quotes! Click the Contact Us button above.";
+    }
+
+    if (m.includes("services")) {
+        reply = "We provide cutting, trimming, hauling, stump removal, and more.";
+    }
+
+    // Show bot reply
+    setTimeout(() => {
+        box.innerHTML += `<div class="bot-msg">${reply}</div>`;
+        box.scrollTop = box.scrollHeight;
+    }, 500);
+}
+</script>
+
+</body>
+</html>
