--- a/index.html
+++ b/index.html
@@ -1,172 +1,244 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Armando’s Tree Care Services</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: #f5f5f0;
-        }
-        header {
-            background: #3d5c37;
-            color: white;
-            padding: 25px;
-            text-align: center;
-        }
-        .hero {
-            background: url("https://images.unsplash.com/photo-1508873693437-1f76e9a3a52c?auto=format&fit=crop&w=1400&q=80") no-repeat center/cover;
-            height: 330px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            text-shadow: 0px 0px 12px black;
-            font-size: 2rem;
-            font-weight: bold;
-        }
-        .section {
-            max-width: 900px;
-            margin: 30px auto;
-            background: #ffffff;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 0 12px rgba(0,0,0,0.1);
-        }
-        .contact-btn {
-            display: inline-block;
-            background: #5c7f56;
-            color: white;
-            padding: 12px 20px;
-            border-radius: 6px;
-            text-decoration: none;
-            font-size: 1.1rem;
-            font-weight: bold;
-        }
-        .contact-btn:hover {
-            background: #4c6b48;
-        }
-        footer {
-            background: #3d5c37;
-            color: white;
-            text-align: center;
-            padding: 20px;
-            margin-top: 40px;
-        }
-        .chatbox {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            width: 260px;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 3px 10px rgba(0,0,0,0.2);
-            display: flex;
-            flex-direction: column;
-            font-size: 0.9rem;
-            overflow: hidden;
-        }
-        .chatbox-header {
-            background: #5c7f56;
-            color: white;
-            padding: 10px;
-            text-align: center;
-            font-weight: bold;
-        }
-        .chatbox-messages {
-            height: 180px;
-            padding: 10px;
-            overflow-y: auto;
-            border-bottom: 1px solid #ddd;
-        }
-        .chatbox-input {
-            display: flex;
-            padding: 10px;
-        }
-        .chatbox-input input {
-            flex-grow: 1;
-            padding: 6px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        .chatbox-input button {
-            padding: 6px 10px;
-            margin-left: 6px;
-            background: #5c7f56;
-            border: none;
-            color: white;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .chatbox-input button:hover {
-            background: #4c6b48;
-        }
-        .user-msg {
-            text-align: right;
-            margin: 6px 0;
-            color: #333;
-        }
-        .bot-msg {
-            text-align: left;
-            margin: 6px 0;
-            color: #2f4a2a;
-            font-weight: bold;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Your Trees, Our Expertise</title>
+
+<style>
+
+/* ===== RESET ===== */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+}
+
+/* ===== HEADER ===== */
+header {
+  background: url('https://images.unsplash.com/photo-1501004318641-b39e6451bec6?auto=format&fit=crop&w=1500&q=80') center/cover no-repeat;
+  color: #fff;
+  text-align: center;
+  padding: 100px 20px;
+}
+
+header h1 {
+  font-size: 3rem;
+  text-shadow: 0 3px 6px rgba(0,0,0,0.4);
+}
+
+header p {
+  font-size: 1.3rem;
+  margin-top: 10px;
+  text-shadow: 0 3px 6px rgba(0,0,0,0.4);
+}
+
+/* ===== SECTIONS ===== */
+section {
+  padding: 60px 20px;
+}
+
+/* ===== SERVICES ===== */
+.services-section {
+  background: #f8f8f8;
+  text-align: center;
+}
+
+.section-title {
+  font-size: 2.4rem;
+  margin-bottom: 10px;
+  color: #2f4f2f;
+}
+
+.section-subtitle {
+  font-size: 1.1rem;
+  margin-bottom: 40px;
+  color: #666;
+}
+
+.services-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 25px;
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+.service-card {
+  background: white;
+  border-radius: 10px;
+  padding: 25px;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+  transition: transform 0.25s ease, box-shadow 0.25s ease;
+}
+
+.service-card:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+}
+
+.service-card h3 {
+  margin-bottom: 10px;
+  font-size: 1.4rem;
+  color: #2e5932;
+}
+
+.service-card p {
+  font-size: 1rem;
+  color: #444;
+  line-height: 1.6;
+}
+
+/* ===== ABOUT US ===== */
+.about-section {
+  max-width: 900px;
+  margin: auto;
+  text-align: center;
+}
+
+.about-section h2 {
+  font-size: 2.2rem;
+  margin-bottom: 20px;
+}
+
+.about-section p {
+  font-size: 1.1rem;
+  line-height: 1.7;
+  color: #444;
+}
+
+/* ===== CONTACT ===== */
+.contact-section {
+  background: #2f4f2f;
+  color: #fff;
+  text-align: center;
+}
+
+.contact-section h2 {
+  font-size: 2.2rem;
+  margin-bottom: 20px;
+}
+
+.contact-section p {
+  font-size: 1.1rem;
+  margin-bottom: 30px;
+}
+
+.contact-btn {
+  background: #fff;
+  color: #2f4f2f;
+  padding: 12px 25px;
+  text-decoration: none;
+  border-radius: 6px;
+  font-size: 1.1rem;
+  transition: 0.25s ease;
+}
+
+.contact-btn:hover {
+  background: #d1ffd1;
+  color: #1d3d1d;
+}
+
+/* ===== FOOTER ===== */
+footer {
+  text-align: center;
+  padding: 25px;
+  background: #e6e6e6;
+  color: #555;
+  font-size: 0.9rem;
+}
+
+</style>
 </head>
+
 <body>
+
+<!-- ================= HEADER ================= -->
 <header>
-    <h1>Armando’s Tree Care Services</h1>
-    <p>Professional Tree Care & Cutting – Tailored for Your Needs</p>
+  <h1>Your Trees, Our Expertise</h1>
+  <p>Professional Tree Care • Reliable Service • Safe Results Every Time</p>
 </header>
-<div class="hero">
-    Your Trees, Our Expertise
-</div>
-<div class="section">
-    <h2>Our Services</h2>
-    <ul>
-        <li>Tree Removal & Cutting</li>
-        <li>Trimming & Pruning</li>
-        <li>Stump Grinding</li>
-        <li>Emergency Storm Cleanup</li>
-        <li>And More!</li>
-    </ul>
-    <br>
-    <a class="contact-btn" href="contact.html">📞 Contact Us</a>
-</div>
+
+
+<!-- ================= SERVICES ================= -->
+<section id="services" class="services-section">
+  <h2 class="section-title">Our Expert Tree Services</h2>
+  <p class="section-subtitle">
+    Precision. Safety. Cleanup Done Right.<br>
+    Your trees deserve experts — and we're here to deliver.
+  </p>
+
+  <div class="services-grid">
+
+    <div class="service-card">
+      <h3>🌳 Tree Removal</h3>
+      <p>
+        Hazardous, storm-damaged, or unwanted trees removed with absolute safety and care.
+      </p>
+    </div>
+
+    <div class="service-card">
+      <h3>✂️ Tree Trimming & Pruning</h3>
+      <p>
+        Healthy cuts, better growth, and improved curb appeal — all done with expert precision.
+      </p>
+    </div>
+
+    <div class="service-card">
+      <h3>🪵 Stump Grinding</h3>
+      <p>
+        We remove stumps below ground level and leave your yard smooth, clean, and ready to use.
+      </p>
+    </div>
+
+    <div class="service-card">
+      <h3>⛈️ Storm Cleanup</h3>
+      <p>
+        Fast, dependable emergency cleanup after storms and fallen limbs.
+      </p>
+    </div>
+
+    <div class="service-card">
+      <h3>🌱 Land & Lot Clearing</h3>
+      <p>
+        Clear your property for construction, landscaping, or general cleanup.
+      </p>
+    </div>
+
+    <div class="service-card">
+      <h3>🌿 Hedge & Bush Shaping</h3>
+      <p>
+        A clean, sharp, manicured look for your home's landscaping.
+      </p>
+    </div>
+
+  </div>
+</section>
+
+
+<!-- ================= ABOUT SECTION ================= -->
+<section class="about-section">
+  <h2>Why Homeowners Choose Us</h2>
+  <p>
+    We combine safety, professionalism, and affordability to deliver the highest-quality tree service experience.
+    Whether it's a routine trim or an emergency removal, our team treats your property with the same care as our own.
+  </p>
+</section>
+
+
+<!-- ================= CONTACT ================= -->
+<section class="contact-section" id="contact">
+  <h2>Ready for Professional Tree Service?</h2>
+  <p>Fast estimates, fair pricing, and unmatched customer care.</p>
+  <a href="#contact" class="contact-btn">Request a Quote</a>
+</section>
+
+
+<!-- ================= FOOTER ================= -->
 <footer>
-    © 2025 Armando’s Tree Care Services – All Rights Reserved
+  © 2025 Your Trees, Our Expertise — Professional Tree Services
 </footer>
-<!-- Chat Box -->
-<div class="chatbox">
-    <div class="chatbox-header">Live Chat</div>
-    <div class="chatbox-messages" id="chatbox-messages">
-        <div class="bot-msg">Hi! How can we assist you today?</div>
-    </div>
-    <div class="chatbox-input">
-        <input type="text" id="chat-input" placeholder="Type a message…">
-        <button onclick="sendChat()">Send</button>
-    </div>
-</div>
-<script>
-    function sendChat() {
-        const input = document.getElementById("chat-input");
-        const msg = input.value.trim();
-        if (msg === "") return;
-        const box = document.getElementById("chatbox-messages");
-        box.innerHTML += `<div class="user-msg">${msg}</div>`;
-        input.value = "";
-        let reply = "I'm not sure, but feel free to contact us!";
-        const m = msg.toLowerCase();
-        if (m.includes("hello") || m.includes("hi")) {
-            reply = "Hello! How can we help you with your trees today?";
-        }
-        if (m.includes("phone") || m.includes("number")) {
-            reply = "You can reach us at (555) 123-4567.";
-        }
-        if (m.includes("services")) {
-            reply = "We offer removal, trimming, stump grinding, and more!";
-        }
-        if (m.includes("hours")
+
+</body>
+</html>
