--- a/index.html
+++ b/index.html
@@ -1,387 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Armando Tree Service</title>
-
-<style>
-/* RESET */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Arial, sans-serif;
-}
-
-/* HEADER WITH CALL BUTTON */
-header {
-  background: url('https://images.unsplash.com/photo-1501004318641-b39e6451bec6?auto=format&fit=crop&w=1500&q=80')
-    center/cover no-repeat;
-  color: #fff;
-  text-align: center;
-  padding: 100px 20px;
-  position: relative;
-}
-
-.call-btn-top {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  background: #2f4f2f;
-  color: #fff;
-  padding: 12px 18px;
-  border-radius: 6px;
-  text-decoration: none;
-  font-size: 1rem;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.3);
-  transition: 0.25s ease;
-}
-
-.call-btn-top:hover {
-  background: #3b6f3b;
-}
-
-header h1 {
-  font-size: 3rem;
-  text-shadow: 0 3px 6px rgba(0,0,0,0.4);
-}
-
-header p {
-  font-size: 1.3rem;
-  margin-top: 10px;
-  text-shadow: 0 3px 6px rgba(0,0,0,0.4);
-}
-
-/* SECTIONS */
-section {
-  padding: 60px 20px;
-}
-
-/* SERVICES SECTION */
-.services-section {
-  background: #f8f8f8;
-  text-align: center;
-}
-
-.section-title {
-  font-size: 2.4rem;
-  margin-bottom: 10px;
-  color: #2f4f2f;
-}
-
-.section-subtitle {
-  font-size: 1.1rem;
-  margin-bottom: 40px;
-  color: #666;
-}
-
-.services-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-  gap: 25px;
-  max-width: 1100px;
-  margin: 0 auto;
-}
-
-.service-card {
-  background: white;
-  border-radius: 10px;
-  padding: 25px;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.08);
-  transition: 0.25s ease;
-}
-
-.service-card:hover {
-  transform: translateY(-6px);
-  box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-}
-
-.service-card h3 {
-  margin-bottom: 10px;
-  font-size: 1.4rem;
-  color: #2e5932;
-}
-
-.service-card p {
-  font-size: 1rem;
-  color: #444;
-  line-height: 1.6;
-}
-
-/* ABOUT SECTION */
-.about-section {
-  max-width: 900px;
-  margin: auto;
-  text-align: center;
-}
-
-.about-section h2 {
-  font-size: 2.2rem;
-  margin-bottom: 20px;
-}
-
-.about-section p {
-  font-size: 1.1rem;
-  line-height: 1.7;
-  color: #444;
-}
-
-/* CONTACT */
-.contact-section {
-  background: #2f4f2f;
-  color: #fff;
-  text-align: center;
-}
-
-.contact-section h2 {
-  font-size: 2.2rem;
-  margin-bottom: 20px;
-}
-
-.contact-section p {
-  font-size: 1.1rem;
-  margin-bottom: 30px;
-}
-
-.contact-btn {
-  background: #fff;
-  color: #2f4f2f;
-  padding: 12px 25px;
-  text-decoration: none;
-  border-radius: 6px;
-  font-size: 1.1rem;
-  transition: 0.25s ease;
-}
-
-.contact-btn:hover {
-  background: #d1ffd1;
-  color: #1d3d1d;
-}
-
-/* FOOTER */
-footer {
-  text-align: center;
-  padding: 25px;
-  background: #e6e6e6;
-  color: #555;
-  font-size: 0.9rem;
-}
-
-/* CHATBOT FLOATING BUTTON */
-#chatbot-btn {
-  position: fixed;
-  bottom: 25px;
-  right: 25px;
-  background: #2f4f2f;
-  color: #fff;
-  padding: 16px 20px;
-  border-radius: 50px;
-  cursor: pointer;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-  z-index: 999;
-  transition: 0.3s;
-}
-
-#chatbot-btn:hover {
-  background: #3b6f3b;
-}
-
-/* CHATBOT WINDOW */
-#chatbot-window {
-  display: none;
-  position: fixed;
-  bottom: 90px;
-  right: 25px;
-  width: 300px;
-  height: 400px;
-  background: #fff;
-  border-radius: 12px;
-  box-shadow: 0 4px 20px rgba(0,0,0,0.3);
-  z-index: 999;
-  overflow: hidden;
-}
-
-#chatbot-header {
-  background: #2f4f2f;
-  color: #fff;
-  padding: 12px;
-  text-align: center;
-}
-
-#chatbot-messages {
-  padding: 10px;
-  height: 300px;
-  overflow-y: auto;
-  font-size: 0.95rem;
-}
-
-#chatbot-input-area {
-  border-top: 1px solid #ccc;
-  padding: 10px;
-  display: flex;
-  gap: 8px;
-}
-
-#chatbot-input {
-  flex: 1;
-  padding: 8px;
-  border: 1px solid #ddd;
-  border-radius: 6px;
-}
-
-#chatbot-send {
-  padding: 8px 12px;
-  background: #2f4f2f;
-  color: #fff;
-  border-radius: 6px;
-  cursor: pointer;
-}
-</style>
-
-</head>
-<body>
-
-<!-- CALL US BUTTON -->
-<a href="tel:+9195592330" class="call-btn-top">Call Us</a>
-
-<!-- HEADER -->
-<header>
-  <h1>Armando Tree Service</h1>
-  <p>Professional. Reliable. Local Experts You Can Trust.</p>
-</header>
-
-<!-- SERVICES -->
-<section id="services" class="services-section">
-  <h2 class="section-title">Our Expert Tree Services</h2>
-  <p class="section-subtitle">
-    Safe, reliable, affordable tree work for every home and property.
-  </p>
-
-  <div class="services-grid">
-    <div class="service-card"><h3>🌳 Tree Removal</h3>
-      <p>Safe removal of dead, leaning, or dangerous trees.</p></div>
-
-    <div class="service-card"><h3>✂️ Trimming & Pruning</h3>
-      <p>Improve tree health, growth, and appearance.</p></div>
-
-    <div class="service-card"><h3>🪵 Stump Grinding</h3>
-      <p>Clean removal of old stumps for a smooth yard.</p></div>
-
-    <div class="service-card"><h3>⛈️ Storm Cleanup</h3>
-      <p>Emergency response for fallen limbs and debris.</p></div>
-
-    <div class="service-card"><h3>🌱 Lot Clearing</h3>
-      <p>Prepare land for construction or landscaping.</p></div>
-
-    <div class="service-card"><h3>🌿 Hedge Trimming</h3>
-      <p>A cleaner, sharper look for your outdoor spaces.</p></div>
-  </div>
-</section>
-
-<!-- ABOUT -->
-<section class="about-section">
-  <h2>Why Choose Armando Tree Service?</h2>
-  <p>
-    With years of experience serving our community, we deliver professional,
-    affordable, and high-quality tree care.  
-    Whether you need emergency cleanup or routine trimming, our team treats your property with respect and attention to detail.
-  </p>
-</section>
-
-<!-- CONTACT -->
-<section class="contact-section" id="contact">
-  <h2>Get Your Free Estimate Today</h2>
-  <p>Fast service. Fair pricing. Friendly professionals.</p>
-  <a href="tel:+9195592330" class="contact-btn">Call Now</a>
-</section>
-
-<!-- FOOTER -->
-<footer>
-  © 2025 Armando Tree Service — Serving our local community with pride.
-</footer>
-
-<!-- CHATBOT BUTTON -->
-<div id="chatbot-btn">Chat</div>
-
-<!-- CHATBOT WINDOW -->
-<div id="chatbot-window">
-  <div id="chatbot-header">Armando Assistant</div>
-  <div id="chatbot-messages"></div>
-  <div id="chatbot-input-area">
-    <input type="text" id="chatbot-input" placeholder="Ask a question..." />
-    <button id="chatbot-send">Send</button>
-  </div>
-</div>
-
-<!-- BILINGUAL CHATBOT SCRIPT -->
-<script>
-const chatbotBtn = document.getElementById("chatbot-btn");
-const chatbotWindow = document.getElementById("chatbot-window");
-const chatbotInput = document.getElementById("chatbot-input");
-const chatbotSend = document.getElementById("chatbot-send");
-const chatbotMessages = document.getElementById("chatbot-messages");
-
-chatbotBtn.onclick = () => {
-  chatbotWindow.style.display =
-    chatbotWindow.style.display === "block" ? "none" : "block";
-};
-
-function botReply(msg) {
-  chatbotMessages.innerHTML += "<div><strong>Bot:</strong> " + msg + "</div>";
-  chatbotMessages.scrollTop = chatbotMessages.scrollHeight;
-}
-
-function userReply(msg) {
-  chatbotMessages.innerHTML += "<div><strong>You:</strong> " + msg + "</div>";
-}
-
-function isSpanish(text) {
-  return /[áéíóúñ¿¡]/i.test(text) ||
-         /\b(hola|precio|cuánto|árbol|servicio|estimado|remover|limpiar|urgencia|molino|tocón|poda|ramas)\b/i.test(text);
-}
-
-function processEnglish(msg) {
-  const t = msg.toLowerCase();
-
-  if (t.includes("hello") || t.includes("hi")) return "Hello! How can I help you today?";
-  if (t.includes("price") || t.includes("quote")) return "We offer free estimates! What service do you need?";
-  if (t.includes("remove") || t.includes("tree removal")) return "We can safely remove dead, leaning, or dangerous trees. What kind of removal do you need?";
-  if (t.includes("trim") || t.includes("prune")) return "Tree trimming improves health and growth. What tree needs trimming?";
-  if (t.includes("stump")) return "We offer stump grinding. How big is the stump you need removed?";
-  if (t.includes("emergency") || t.includes("storm")) return "We provide storm cleanup. What happened at your location?";
-  if (t.includes("contact") || t.includes("call")) return "You can call Armando Tree Service at +9195592330.";
-  
-  return "I’m here to help! What tree service are you looking for?";
-}
-
-function processSpanish(msg) {
-  const t = msg.toLowerCase();
-
-  if (t.includes("hola")) return "¡Hola! ¿En qué puedo ayudarle hoy?";
-  if (t.includes("precio") || t.includes("cuánto") || t.includes("estimado")) return "¡Ofrecemos estimados gratis! ¿Qué servicio necesita?";
-  if (t.includes("remover") || t.includes("árbol")) return "Podemos remover árboles peligrosos o dañados. ¿Qué tipo de árbol necesita quitar?";
-  if (t.includes("poda") || t.includes("ramas") || t.includes("recortar")) return "La poda ayuda al crecimiento saludable. ¿Qué árbol necesita atención?";
-  if (t.includes("tocón") || t.includes("stump")) return "Ofrecemos servicio de molino de tocones. ¿Qué tamaño tiene el tocón?";
-  if (t.includes("emergencia") || t.includes("tormenta")) return "Ofrecemos limpieza de emergencia. ¿Qué pasó en su propiedad?";
-  if (t.includes("llamar") || t.includes("contacto")) return "Puede llamar a Armando Tree Service al +9195592330.";
-
-  return "Estoy aquí para ayudarle. ¿Qué servicio de árboles necesita?";
-}
-
-chatbotSend.onclick = () => {
-  const message = chatbotInput.value.trim();
-  if (!message) return;
-
-  userReply(message);
-  chatbotInput.value = "";
-
-  setTimeout(() => {
-    if (isSpanish(message)) botReply(processSpanish(message));
-    else botReply(processEnglish(message));
-  }, 500);
-};
-</script>
-
-</body>
-</html>
+<html><body>Index placeholder</body></html>
